--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,13 +4,13 @@
     box-sizing: border-box;
 }
 .personal-data{
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
    text-align: center;
    margin-top: 70px !important;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-   width: 50%;
+   width: 80%;
    padding: 50px;
    margin: 300px;
    height: auto;
@@ -37,7 +37,7 @@ color: yellow;
 text-decoration: none;
 height: 40px;
 font-weight: 700;
-width: 50%;
+width: 80%;
 background-color: black;
 padding: 15px;
 border-radius: 30px;
